# Eye_state_prediction_using_EEG_by_KNN

./: README.md  app.py  pyproject.toml  requirements.txt
notebook/: DS Mini Project Guidelines.docx
pickle_files/: knn_model.pkl  scaler.pkl
templates/: description.html  home.html  prediction.html
